# buddy-mvp

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  main.py  nginx.conf  production.yaml  pyproject.toml
config/: db.py  settings.py
src/conversations/: routes.py
src/conversations/models/: __init__.py  image_transcription.py  session.py
src/conversations/repositories/: __init__.py  audio_transcription.py  image_transcription.py  session.py  session_repository.py
src/conversations/schemas/: audio_transcription.py  image_transcription.py  session.py
src/conversations/services/: __init__.py  audio_transcription_service.py  conversations_service.py  image_transcription_service.py  images_service.py  realtime.py  session_service.py
src/files/: routes.py
src/files/lambda/: upload_file.py
src/files/models/: files.py
src/files/repositories/: __init__.py  files.py
src/integrations/: realtime.py
src/models/: __init__.py  audio_transcription.py  files.py  realtime_event.py
src/repositories/: __init__.py  audio_transcription.py  files.py  image_transcription.py  realtime_event.py  session.py
src/routes/: conversations.py  files.py  voice.py
src/schemas/: audio_transcription.py  files.py  image_transcription.py  session.py
src/services/: __init__.py  audio_transcription_service.py  conversations_service.py  files_service.py  image_transcription_service.py  images_service.py  session_service.py  transcription_service.py
src/voice/: routes.py
utils/: ai.py  constants.py  logger.py  s3.py
(+6 files in other folders)
